# ascii_generator

./: CMakeLists.txt  README.md
include/: bmpHeader.h  bmpParser.h  fileReader.h
src/: bmpParser.cpp  fileReader.cpp  main.cpp
